# TIMflight

./: .gitignore  .gitmodules  CODEOWNERS  README.md  installing_vagrant_for_mcp_compilation  temp.txt  test.cs
.github/ISSUE_TEMPLATE/: bug_report.md  developer-task.md
.github/workflows/: build-flight-software.yml  build-ground-software.yml  cmake.yml
blast_comms/: CMakeLists.txt
blast_config/: CMakeLists.txt  command_list.c  derived.c  slowdl_struct.c  tx_struct_tng.c
blast_config/include/: calibrate.h  command_list.h
blast_config/linklists/: all_telemetry.ll.auto  cryo_important.ll  fast_shared.ll  inclinometer.ll  pbob.ll  pss_pointing.ll  sbd.ll  shared.ll  steppers.ll  test.ll
blast_config/linklists/old/: steppers_essential.ll  thermistors.ll
blast_etc/: thermistor_R_to_T_TIM.LUT  thermistor_R_to_T_TIM.lut  thermistor_V_to_R_TIM.LUT  thermistor_V_to_R_TIM.lut
blast_etc/chrony/: chrony.conf
blast_etc/default/: gpsd
blast_etc/hosts/: hosts_fc1  hosts_fc2
blast_etc/netplan/: 00-installer-config_fc1.yaml  00-installer-config_fc2.yaml  00-installer-config_sc1.yaml  00-installer-config_sc2.yaml
blast_etc/systemd/: flight_software.service
blast_etc/udev/: 91-serial.rules  zz-ueyeusbd.rules
blast_etc/ulimit/: limits.conf.fc  limits.conf.gse
blastcmd/: elog.c
common/: CMakeLists.txt  bitserver.c  channels_tng.c  fir.c  logger.c  lut.c  netcmd.h
common/include/: bitserver.h  channel_macros.h  channels_tng.h  logger.h
cow/: cow.pro  cow.pro.save
cow/data/: roach.herd
decomd/: CMakeLists.txt
docs/: GitLfs.md  ReimagingFlightComputer.md  SubsystemSummary.md
emulator/: UDPlistener.c  UDPwriter.c  UDPwriter_NEW.c  UDPwriter_OLD.c  listener_temp.out  whatever.out  writer_temp.out
emulator/old_scripts/: UDPlistener_OLD.c
external_libs/mpsse/: CMakeLists.txt  binarybuffer.c  binarybuffer.h  mpsse.c  mpsse.h
external_libs/synclink/: CMakeLists.txt
flight/scripts/: build.sh  build_clean.sh
ground/cow/: Makefile  cow
ground/guaca/: Makefile  guaca
ground/mole/: CMakeLists.txt
ground/scripts/: build.sh
ground_ops/cow/: cow.pro
ground_ops/groundhog/: CMakeLists.txt
ground_ops/guaca/: guaca.pro  mainwindow.cpp
ground_ops/scripts/: build_clean.sh
groundhog/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  groundhog  groundhog_funcs.c  groundhog_funcs.h  install_manifest.txt
groundhog/bit/: pilot.c
groundhog/blast/: CMakeLists.txt  biphase.c  decom_pci.h  evtm.c  groundhog.h  highrate.c  main.c  pilot.c
groundhog/blast/tests/: CMakeLists.txt  test_gh_evtm.c
groundhog/blast_common/: Makefile  cmake_install.cmake
groundhog/blast_comms/: Makefile  cmake_install.cmake
groundhog/blast_config/: Makefile  cmake_install.cmake
groundhog/liblinklist/: Makefile  cmake_install.cmake
groundhog/testing/: clint.sh
groundhog/tests/: CMakeLists.txt  clint.sh  test_gh_evtm.c
guaca/: test.cs
kst/tim/: all_kst.sh  azimuth.kst  core_pos_time_mcp.kst  cryo_hk.kst  dgps.kst  ec_motors.kst  elevation.kst  gyros.kst  hard_disks.kst  magnetometers.kst  pinhole_sun_sensors.kst  power_system.kst  radec.kst  reaction_wheel.kst  sip.kst  (+2 more)
liblinklist/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  linklist.c  linklist.h  linklist_writer.c
linklistcheck/: Makefile
mcp/: .gitignore  CMakeLists.txt  mcp.c  scheduler_tng.c  tx.c
mcp/commanding/: CMakeLists.txt  commands.c  syscommands.c
mcp/communications/: CMakeLists.txt  bi0.c  biphase_hardware.c  evtm.c  highrate.c  pilot.c
mcp/communications/include/: bi0.h  evtm.h  highrate.h  pilot.h
mcp/communications/tests/: CMakeLists.txt  test_evtm.c
mcp/diskmanager/: CMakeLists.txt  diskmanager_tng.c  file_buffer.c  file_buffer_tng.c  store_data.c
mcp/framing/: CMakeLists.txt  framing.c
mcp/housekeeping/: CMakeLists.txt  auxiliary.c  chrgctrl.c  computer_sensors.c  cryo_tauhk.c  cryo_tauhk_cmd.c  cryostat.c  data_sharing_server.c  gondola_thermometry.c  inner_frame_power.c  labjack.c  labjack_functions.c  labjack_test.c  loop_timing.c  motor_box_power.c  multiplexed_labjack.c  outer_frame.c  outer_frame_power.c  sensor_updates.c  therm_heater.c  watchdog.c
mcp/include/: actuators.h  blast_comms.h  chrgctrl.h  command_struct.h  computer_sensors.h  cryo_tauhk.h  cryo_tauhk_cmd.h  csbf_dgps.h  data_sharing_server.h  diskmanager_tng.h  dsp1760.h  ec_motors.h  ezstep.h  file_buffer_tng.h  framing.h  geomag.h  gondola_thermometry.h  gps.h  inclinometer.h  inner_frame_power.h  labjack.h  labjack_functions.h  labjack_test.h  loop_timing.h  mcp.h  motor_box_power.h  motordefs.h  motors.h  outer_frame_power.h  pointing.h  pointing_struct.h  rfsoc_commanding.h  socket_utils.h  star_camera_receive.h  star_camera_solutions.h  star_camera_structs.h  star_camera_transmit.h  star_camera_trigger.h  store_data.h  syscommands.h  (+6 more)
mcp/legacyMCP/housekeeping/: cryostat.c
mcp/legacyMCP/motors/: cryovalves.c
mcp/legacyMCP/roach/: CMakeLists.txt
mcp/motors/: CMakeLists.txt  README.md  actuators.c  balance.c  cryovalves.c  ec_motors.c  ezstep.c  motors.c  xystage.c
mcp/motors/tests/: CMakeLists.txt  mcp_mock_decl.c  test_balance.c  test_el_lock.c  test_shutter.c
mcp/pointing/: CMakeLists.txt  angles.c  pointing.c  radbox.c  time_julian.c  time_lst.c  time_nutation.c  utilities_pointing.c  xsc_pointing.c
mcp/pointing/tests/: CMakeLists.txt  mcp_mock_decl.c  test_pointing.c
mcp/rfsoc/: CMakeLists.txt  rfsoc_commanding.c
mcp/roach/: CMakeLists.txt
mcp/sensors/: CMakeLists.txt  acs.c  csbf_dgps.c  dsp1760.c  geomag.c  geomag2020.c  gps.c  inclinometer.c  inclinometers.c  magnetometer.c  socket_utils.c  star_camera_receive.c  star_camera_solutions.c  star_camera_transmit.c  star_camera_trigger.c  tim_gps.c  xsc_protocol.c
mcp/sensors/tests/: CMakeLists.txt  test_inclinometer.c
mcp/testing/: clint.sh  mcp_mock_decl.c
mcp/uei/: CMakeLists.txt
mole/: CMakeLists.txt
owl/: PAbstractDataItem.cpp  PMainWindow.cpp  PStyleChooser.cpp  main.cpp  owl.pro
scripts/: README.md
utils/: CMakeLists.txt  comparison.c
utils/tests/: CMakeLists.txt  test_comparison.c
(+33 files in other folders)
